renamed all partial files to .partial. improved journal index generation logic

--- a/pages/about.tmpl
+++ b/pages/about.tmpl
@@ -1,8 +1,9 @@
-<= partials/header.tmpl
+<= partials/header.partial
 
 # about
 
 ## why this website?
+
 To talk about topics that are of importance to me. To reflect on us as a species in relation to the bigger picture.
 
 I'm not particularily social. Nor do I think that I have unique bits of wisdom to offer.
