--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -1,10 +1,8 @@
-<= partials/header.tmpl
+<= partials/header.partial
 
 # Laniakea
 
-## Welcome!
-
-Hi! 
+## Hello and welcome!
 
 I'm Dominique.
 
