--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -6,5 +6,12 @@
 
 I'm Dominique.
 
-This is mostly a public diary that I write for myself as much as for anyone who might want to read it. See the about page for more on that. Feel free to browse the Journal. Enjoy.
+This is mostly a public journal that I write for myself as much as for anyone who might want to read it. See the about page for more on that. Feel free to browse the Journal. Enjoy.
 
+
+I am part of the LEO orbit. Go and visit my neighbours when you leave!
+
+=> gemini://tilde.team/~khuxkm/leo/ The LEO orbit
+=> gemini://tilde.team/~khuxkm/leo/next.cgi?gemini%3A%2F%2Flaniakea.rodoste.de next capsule
+=> gemini://tilde.team/~khuxkm/leo/prev.cgi?gemini%3A%2F%2Flaniakea.rodoste.de previous capsule
+=> gemini://tilde.team/~khuxkm/leo/rand.cgi?gemini%3A%2F%2Flaniakea.rodoste.de a random capsule
