tweaking LEO links

--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -11,7 +11,7 @@ This is mostly a public journal that I write for myself as much as for anyone wh
 
 I am part of the LEO orbit. Go and visit my neighbours when you leave!
 
-=> gemini://tilde.team/~khuxkm/leo/ The LEO orbit
-=> gemini://tilde.team/~khuxkm/leo/next.cgi?gemini%3A%2F%2Flaniakea.rodoste.de next capsule
-=> gemini://tilde.team/~khuxkm/leo/prev.cgi?gemini%3A%2F%2Flaniakea.rodoste.de previous capsule
-=> gemini://tilde.team/~khuxkm/leo/rand.cgi?gemini%3A%2F%2Flaniakea.rodoste.de a random capsule
+=> gemini://tilde.team/~khuxkm/leo/ About the LEO orbit
+=> gemini://tilde.team/~khuxkm/leo/next.cgi?gemini%3A%2F%2Flaniakea.rodoste.de ▶  next capsule
+=> gemini://tilde.team/~khuxkm/leo/rand.cgi?gemini%3A%2F%2Flaniakea.rodoste.de 🔁 a random capsule
+=> gemini://tilde.team/~khuxkm/leo/prev.cgi?gemini%3A%2F%2Flaniakea.rodoste.de ◀  previous capsule
